unpackaged/main/default/objects/CMPL123__AuditTrail_Config__c/CMPL123__AuditTrail_Config__c.object-meta.xml
<CustomObject>
    <description>Audit Trail Config</description>
    <label>Audit Trail Config</label>
    <nameField>
        <label>Object Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Audit Trail Config</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>