unpackaged/main/default/objects/CMPL123__AuditTrail_Config__c/fields/CMPL123__AuditTrail_External_Id__c.field-meta.xml
<CustomField>
        <fullName>CMPL123__AuditTrail_External_Id__c</fullName>
        <externalId>true</externalId>
        <label>AuditTrail External Id</label>
        <length>30</length>
        <type>Text</type>
    </CustomField>