unpackaged/main/default/objects/CMPL123__AuditTrail_Config__c/fields/CMPL123__Fields__c.field-meta.xml
<CustomField>
        <fullName>CMPL123__Fields__c</fullName>
        <description>Selected fields separated by Comma / JSON or XML String</description>
        <inlineHelpText>Specify Fields separated by Comma</inlineHelpText>
        <label>Fields</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </CustomField>