unpackaged/main/default/objects/CMPL123__AuditTrail_Config__c/fields/CMPL123__Is_Active__c.field-meta.xml
<CustomField>
        <fullName>CMPL123__Is_Active__c</fullName>
        <defaultValue>true</defaultValue>
        <description>uncheck for deactivate</description>
        <inlineHelpText>Uncheck for deactivate</inlineHelpText>
        <label>Is Active</label>
        <type>Checkbox</type>
    </CustomField>