unpackaged/main/default/objects/CMPL123__AuditTrail_Config__c/fields/CMPL123__Parent_Relationship_Object__c.field-meta.xml
<CustomField>
        <fullName>CMPL123__Parent_Relationship_Object__c</fullName>
        <label>Parent Relationship Object</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </CustomField>